@@ -65,6 +65,7 @@ test-suite libtorrent :
 	[ run test_fence.cpp ]
 	[ run test_storage.cpp ]
 	[ run test_torrent_parse.cpp ]
+	[ run test_session.cpp ]
 	[ run test_upnp.cpp ]
 
 	[ run test_tracker.cpp ]
